fix: add class to submenu on factions page and style it to align menu correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,10 @@ header > a {
     font-size: 100%;
 }
 
+.factions-menu {
+    margin-right: 18px;
+}
+
 .menu .active {
     background-color: #F7AE6E;
     padding: 0 10px;
